# EdgeV3

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/api/database/: db_initializer.hpp  db_manager.hpp
include/api/middleware/: global_middleware.hpp
include/api/models/: camera_model.hpp  response_model.hpp
include/api/routes/: camera_routes.hpp  route_manager.hpp  system_routes.hpp  user_routes.hpp
include/utils/: wifi_manager.hpp
lib/audio/: audio.h  wavHeader.h
lib/decode/: endeCode_api.h  node_desc.h
lib/disp/: disp.h
lib/yolov8/: file_utils.h  postprocess.h  yolov8.cpp  yolov8.h  yolov8_postprocess.cpp
src/: main.cpp
src/api/database/: db_initializer.cpp  db_manager.cpp
src/api/middleware/: global_middleware.cpp
src/api/models/: camera_model.cpp  response_model.cpp
src/api/routes/: camera_routes.cpp  route_manager.cpp  system_routes.cpp  user_routes.cpp
src/utils/: wifi_manager.cpp
